style: format less

--- a/layouts/partials/tree-nav.html
+++ b/layouts/partials/tree-nav.html
@@ -1,7 +1,6 @@
 <ul>
-  {{.global.Site.Title}}
+  {{.global.URL}}
   {{range .tree}}
-  <!-- {{.link}} -->
     {{ if isset . "children" }}
       <li><a href="#" class="active">{{ .name }}</a></li>
         {{ partial "tree-nav.html" (dict "tree" .children "global" $) }}
