--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1,9 +1,9 @@
 /* base */
 
 // color
-@theme_blue: #3A59F0;
+@theme_blue: #3a59f0;
 @white: #fff;
-@bg_black_with_alpha85: rgba(0,0,0,.85);
+@bg_black_with_alpha85: rgba(0,0,0,0.85);
 @bg_black_with_alpha0: rgba(0,0,0,0);
 @bg_white_with_alpha73: rgba(255,255,255,0.73);
 
@@ -13,63 +13,77 @@
 // box
 @box_size: border-box;
 
-
 @font-face {
-    font-family: "Lato Light";
-    src: url('https://download.pingcap.com/fonts/lato/lato-light-webfont.eot'), url('https://download.pingcap.com/fonts/lato/lato-light-webfont.ttf'), url('https://download.pingcap.com/fonts/lato/lato-light-webfont.woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Lato Light';
+  src: url('https://download.pingcap.com/fonts/lato/lato-light-webfont.eot'),
+    url('https://download.pingcap.com/fonts/lato/lato-light-webfont.ttf'),
+    url('https://download.pingcap.com/fonts/lato/lato-light-webfont.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "Lato";
-    src: url('https://download.pingcap.com/fonts/lato/lato-regular-webfont.eot'), url('https://download.pingcap.com/fonts/lato/lato-regular-webfont.ttf'), url('https://download.pingcap.com/fonts/lato/lato-regular-webfont.woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'Lato';
+  src: url('https://download.pingcap.com/fonts/lato/lato-regular-webfont.eot'),
+    url('https://download.pingcap.com/fonts/lato/lato-regular-webfont.ttf'),
+    url('https://download.pingcap.com/fonts/lato/lato-regular-webfont.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "TitilliumWeb Light";
-    src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-light-webfont.eot'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-light-webfont.ttf'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-light-webfont.woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'TitilliumWeb Light';
+  src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-light-webfont.eot'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-light-webfont.ttf'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-light-webfont.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "TitilliumWeb LightItalic";
-    src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-lightitalic-webfont.eot'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-lightitalic-webfont.ttf'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-lightitalic-webfont.woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'TitilliumWeb LightItalic';
+  src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-lightitalic-webfont.eot'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-lightitalic-webfont.ttf'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-lightitalic-webfont.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "TitilliumWeb";
-    src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-regular-webfont.eot'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-regular-webfont.ttf'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-regular-webfont.woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'TitilliumWeb';
+  src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-regular-webfont.eot'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-regular-webfont.ttf'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-regular-webfont.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "TitilliumWeb SemiBold";
-    src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibold-webfont.eot'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibold-webfont.ttf'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibold-webfont.woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'TitilliumWeb SemiBold';
+  src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibold-webfont.eot'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibold-webfont.ttf'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibold-webfont.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "TitilliumWeb SemiBoldItalic";
-    src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibolditalic-webfont.eot'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibolditalic-webfont.ttf'), url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibolditalic-webfont.woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'TitilliumWeb SemiBoldItalic';
+  src: url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibolditalic-webfont.eot'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibolditalic-webfont.ttf'),
+    url('https://download.pingcap.com/fonts/titilliumweb/titilliumweb-semibolditalic-webfont.woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-    font-family: "Lato", Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Noto Sans CJK SC, WenQuanYi Micro Hei, Arial, sans-serif;
+  font-family: 'Lato', Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+    Microsoft YaHei, Noto Sans CJK SC, WenQuanYi Micro Hei, Arial, sans-serif;
 }
 
 html,
 body {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 body,
@@ -81,222 +95,221 @@ input,
 button,
 select,
 textarea {
-    outline: none;
+  outline: none;
 }
 
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 .container {
-    max-width: @max_width;
+  max-width: @max_width;
 }
 
 .f-cb:after {
-    clear: both;
-    content: ' ';
-    display: block;
-    height: 0;
-    visibility: hidden;
+  clear: both;
+  content: ' ';
+  display: block;
+  height: 0;
+  visibility: hidden;
 }
 
 .f-cb {
-    *zoom: 1;
+  *zoom: 1;
 }
 
 .f-ib {
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
 
 .f-blk,
 .f-img,
 .f-link {
-    display: block;
-    width: 100%;
-    height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .f-link {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .f-pr {
-    position: relative;
-    zoom: 1;
+  position: relative;
+  zoom: 1;
 }
 
 .f-pa {
-    position: absolute;
+  position: absolute;
 }
 
 .f-hide {
-    display: none;
+  display: none;
 }
 
 .f-vhide,
 .js-vhide {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .f-oh {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .f-fl {
-    float: left;
+  float: left;
 }
 
 .f-fr {
-    float: right;
+  float: right;
 }
 
 .f-sep {
-    margin-left: 5px;
-    margin-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .f-tdn,
 .f-tdn:hover {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
 .f-pre {
-    word-wrap: break-word;
-    word-break: break-all;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .f-brk {
-    word-wrap: break-word;
-    word-break: break-all;
-    white-space: normal;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: normal;
 }
 
 .f-thide {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .f-thide,
 .f-thide2,
 .f-thide3 {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    /* white-space:nowrap; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* white-space:nowrap; */
 }
 
 .f-thide {
-    word-wrap: normal;
+  word-wrap: normal;
 }
 
 .f-thide2 {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .f-thide3 {
-    -webkit-line-clamp: 3;
+  -webkit-line-clamp: 3;
 }
 
 .f-tdlt {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 
 .f-nw {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .f-tid {
-    text-indent: -9999px;
+  text-indent: -9999px;
 }
 
 .f-nobd {
-    border: none;
+  border: none;
 }
 
 .f-tf {
-    text-align: left;
+  text-align: left;
 }
 
 .f-tr {
-    text-align: right;
+  text-align: right;
 }
 
 .f-tc {
-    text-align: center;
+  text-align: center;
 }
 
 .f-vam {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .f-vc {
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .f-dft,
 .f-dft * {
-    cursor: default;
+  cursor: default;
 }
-
 
 /* only for block elememt */
 
 .f-mgt5 {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .f-mgt10 {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .f-mgt20 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .f-mgr10 {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .f-mgr20 {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .f-mgl10 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .f-mgl20 {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
-a, p a {
+a,
+p a {
   text-decoration: none;
   cursor: pointer;
-  -webkit-transition: color .15s ease-out;
-  -moz-transition: color .15s ease-out;
-  transition: color .15s ease-out;
+  -webkit-transition: color 0.15s ease-out;
+  -moz-transition: color 0.15s ease-out;
+  transition: color 0.15s ease-out;
 }
-
 
 /* 小屏幕（平板，大于等于 768px） */
 
-@media (max-width:768px) {
-    html,
-    body {
-        font-size: 18px;
-    }
+@media (max-width: 768px) {
+  html,
+  body {
+    font-size: 18px;
+  }
 }
