--- a/src/less/bloglist.less
+++ b/src/less/bloglist.less
@@ -4,171 +4,171 @@
 @import 'footer.less';
 @min-height: 1100px;
 @font-color: #3e3e3e;
-@blue: #3A59F0;
+@blue: #3a59f0;
 .archives {
-    width: 100%;
-    color: @font-color;
-    & a {
-        text-decoration: none;
+  width: 100%;
+  color: @font-color;
+  & a {
+    text-decoration: none;
+  }
+  .rss {
+    width: 1.2rem;
+    height: 1.2rem;
+    display: inline-block;
+    border: 1px solid #cdcdcd;
+    color: @blue;
+    line-height: 1.1;
+    position: relative;
+    vertical-align: top;
+    margin-top: 1px;
+    margin-left: 12px;
+
+    &:hover {
+      border-color: @blue;
+      background-color: @blue;
+      color: #fff;
     }
-    .rss {
-        width: 1.2rem;
-        height: 1.2rem;
+
+    &:before {
+      font-size: 0.8rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+    }
+  }
+  .page {
+    min-height: @min-height;
+    padding-top: 100px;
+    .list {
+      padding: 0 5px;
+    }
+    .nav-tags {
+      max-width: 340px;
+      padding: 0 10px;
+      font-family: 'TitilliumWeb';
+      .title {
+        margin: 25px 0 15px;
+        font-weight: 400;
+        font-size: 1.2rem;
+        color: #142848;
+      }
+      .all {
         display: inline-block;
+        padding: 3px 9px;
+        margin-left: -2px;
         border: 1px solid #cdcdcd;
-        color: @blue;
-        line-height: 1.1;
+        font-size: 0.7rem;
+        color: #333;
+      }
+      .all.sel,
+      .all:hover {
+        background-color: @blue;
+        color: #fff;
+        border: 1px solid @blue;
+      }
+      .tag-list {
+        margin: 12px 0 0 -8px;
+        padding: 0;
+        a.tag {
+          float: left;
+          padding: 3px 9px;
+          border: 1px solid #cdcdcd;
+          margin: 6px;
+          font-size: 0.7rem;
+          color: #333;
+        }
+        a.sel,
+        a.tag:hover {
+          background-color: @blue;
+          color: #fff;
+          border: 1px solid @blue;
+        }
+      }
+    }
+    .list {
+      padding: 0 30px;
+      .article {
         position: relative;
-        vertical-align: top;
-        margin-top: 1px;
-        margin-left: 12px;
-
-        &:hover {
-            border-color: @blue;
-            background-color: @blue;
-            color: #fff;
+        .title {
+          margin: 25px 0 15px;
+          font-family: 'TitilliumWeb';
+          font-size: 1.2rem;
+          font-weight: 400;
+          a {
+            color: #142848;
+          }
+          a:hover {
+            color: #666;
+          }
         }
-
-        &:before {
-            font-size: .8rem;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            -webkit-transform: translate(-50%,-50%);
-               -moz-transform: translate(-50%,-50%);
-                -ms-transform: translate(-50%,-50%);
-                 -o-transform: translate(-50%,-50%);
-                    transform: translate(-50%,-50%);
+        .blog-post-meta {
+          padding-left: 0;
+          margin-bottom: 20px;
+          font-size: 0.6rem;
+          list-style: none;
+          svg {
+            width: 18px;
+            height: 18px;
+            margin-top: -3px;
+            margin-right: 5px;
+            vertical-align: middle;
+          }
+          .meta-item {
+            display: inline-block;
+            box-sizing: border-box;
+            padding-right: 20px;
+            .tag {
+              position: relative;
+              margin-right: 16px;
+              color: @blue;
+            }
+            .tag:hover {
+              color: #127eff;
+            }
+            .tag:not(:last-child)::after {
+              content: ' ';
+              position: absolute;
+              width: 1px;
+              height: 0.6rem;
+              top: 1px;
+              right: -8px;
+              background-color: #cdcdcd;
+            }
+          }
         }
+        .brief {
+          font-family: 'Lato';
+          font-weight: 400;
+          font-size: 0.7rem;
+          line-height: 1.8;
+          color: #37434e;
+        }
+        .article_divider {
+          width: 100%;
+          border-top: 1px solid #cdcdcd;
+          margin: 25px 0 20px;
+        }
+        &:after {
+          content: ' ';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          display: block;
+          width: 100%;
+          border-bottom: 3px solid @blue;
+          transform: scale(0);
+          transform-origin: left center;
+          transition: transform 0.3s;
+        }
+        &:hover:after {
+          transform: scale(1);
+        }
+      }
     }
-    .page {
-        min-height: @min-height;
-        padding-top: 100px;
-        .list {
-            padding: 0 5px;
-        }
-        .nav-tags {
-            max-width: 340px;
-            padding: 0 10px;
-            font-family: 'TitilliumWeb';
-            .title {
-                margin: 25px 0 15px;
-                font-weight: 400;
-                font-size: 1.2rem;
-                color: #142848;
-            }
-            .all {
-                display: inline-block;
-                padding: 3px 9px;
-                margin-left: -2px;
-                border: 1px solid #cdcdcd;
-                font-size: .7rem;
-                color: #333;
-            }
-            .all.sel,
-            .all:hover {
-                background-color: @blue;
-                color: #fff;
-                border: 1px solid @blue;
-            }
-            .tag-list {
-                margin: 12px 0 0 -8px;
-                padding: 0;
-                a.tag {
-                    float: left;
-                    padding: 3px 9px;
-                    border: 1px solid #cdcdcd;
-                    margin: 6px;
-                    font-size: .7rem;
-                    color: #333;
-                }
-                a.sel,
-                a.tag:hover {
-                    background-color: @blue;
-                    color: #fff;
-                    border: 1px solid @blue;
-                }
-            }
-        }
-        .list {
-            padding: 0 30px;
-            .article {
-                position: relative;
-                .title {
-                    margin: 25px 0 15px;
-                    font-family: 'TitilliumWeb';
-                    font-size: 1.2rem;
-                    font-weight: 400;
-                    a {
-                        color: #142848;
-                    }
-                    a:hover {
-                        color: #666;
-                    }
-                }
-                .blog-post-meta {
-                    padding-left: 0;
-                    margin-bottom: 20px;
-                    font-size: .6rem;
-                    list-style: none;
-                    svg {
-                        width: 18px;
-                        height: 18px;
-                        margin-top: -3px;
-                        margin-right: 5px;
-                        vertical-align: middle;
-                    }
-                    .meta-item {
-                        display: inline-block;
-                        box-sizing: border-box;
-                        padding-right: 20px;
-                        .tag {
-                            position: relative;
-                            margin-right: 16px;
-                            color: @blue;
-                        }
-                        .tag:hover {
-                            color: #127eff;
-                        }
-                        .tag:not(:last-child)::after {
-                            content: ' ';
-                            position: absolute;
-                            width: 1px;
-                            height: .6rem;
-                            top: 1px;
-                            right: -8px;
-                            background-color: #cdcdcd;
-                        }
-                    }
-                }
-                .brief {
-                    font-family: "Lato";
-                    font-weight: 400;
-                    font-size: .7rem;
-                    line-height: 1.8;
-                    color: #37434e;
-                }
-                .article_divider {
-                    width: 100%;
-                    border-top: 1px solid #cdcdcd;
-                    margin: 25px 0 20px;
-                }
-                &:after {
-                    content: ' ';
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    display: block;
-                    width: 100%;
-                    border-bottom: 3px solid @blue;
-                    transform: scale(0);
-                    transform-origin: left center;
-                    transition: transform .3s;
-                }
-                &:hover:after {
-                    transform: scale(1);
-                }
-            }
-        }
-    }
+  }
 }
