--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,162 +1,162 @@
 /* footer module */
-@import "./base.less";
+@import './base.less';
 
 /** add ellipsis in a line **/
 
 .f-thide {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 .footer {
+  width: 100%;
+  padding: 90px 0 113px;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.85);
+  text-decoration: none;
+  font-size: 13px;
+  color: @white;
+  text-align: center;
+  .icons {
+    padding-top: 16px;
+    .link_icon {
+      width: 26px;
+      height: 26px;
+      margin: 0 10px;
+      svg {
+        width: 26px;
+        height: 26px;
+        fill: @white;
+      }
+    }
+  }
+  .subscribe {
     width: 100%;
-    padding: 90px 0 113px;
-    margin: auto;
-    background-color: rgba(0,0,0,.85);
-    text-decoration: none;
-    font-size: 13px;
-    color: @white;
+    max-width: 340px;
+    margin: 20px auto 0;
+    vertical-align: middle;
+    .form-control {
+      float: left;
+      width: calc(~'100% - 100px');
+      height: 36px;
+      background-color: rgba(255, 255, 255, 0.11);
+      border: none;
+      border-radius: 0;
+      font-size: 0.6rem;
+    }
+    .btn {
+      width: 100px;
+      height: 36px;
+      margin-left: -3px;
+      border-radius: 0;
+      background-color: @theme_blue;
+      font-family: 'TitilliumWeb';
+      font-weight: bold;
+      font-size: 0.6rem;
+      color: @white;
+      &:hover {
+        background-color: @white;
+        color: @theme_blue;
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+    }
+  }
+  .left {
+    max-width: 320px;
+    margin: 0 auto;
+    padding-top: 10px;
+    text-align: left;
+    .wrap {
+      .copyright {
+        margin-top: 30px;
+        font-family: 'Lato Light';
+      }
+    }
+    .lang {
+      margin: 62px 0 0 15px;
+      text-align: right;
+      .btn-lang {
+        padding: 5px 8px;
+        border: 1px solid @white;
+        border-radius: 0;
+        font-size: 0.6rem;
+        color: @white;
+      }
+      .btn-lang:hover {
+        border-radius: 2px;
+        background-color: @white;
+        color: @theme_blue;
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
+      }
+    }
+  }
+  .qr_code_outer {
+    position: absolute;
+    right: 110px;
+    top: 50%;
+    margin-top: -90px;
     text-align: center;
-    .icons {
-        padding-top: 16px;
-        .link_icon {
-            width: 26px;
-            height: 26px;
-            margin: 0 10px;
-            svg {
-                width: 26px;
-                height: 26px;
-                fill: @white;
-            }
-        }
-    }
-    .subscribe {
-        width: 100%;
-        max-width: 340px;
-        margin: 20px auto 0;
-        vertical-align: middle;
-        .form-control {
-            float: left;
-            width: calc(~"100% - 100px");
-            height: 36px;
-            background-color: rgba(255, 255, 255, 0.11);
-            border: none;
-            border-radius: 0;
-            font-size: .6rem;
-        }
-        .btn {
-            width: 100px;
-            height: 36px;
-            margin-left: -3px;
-            border-radius: 0;
-            background-color: @theme_blue;
-            font-family: 'TitilliumWeb';
-            font-weight: bold;
-            font-size: .6rem;
-            color: @white;
-            &:hover {
-                background-color: @white;
-                color: @theme_blue;
-                -webkit-transition: all .5s ease;
-                -moz-transition: all .5s ease;
-                -ms-transition: all .5s ease;
-                -o-transition: all .5s ease;
-                transition: all .5s ease;
-            }
-        }
-    }
-    .left {
-        max-width: 320px;
-        margin: 0 auto;
-        padding-top: 10px;
-        text-align: left;
-        .wrap {
-            .copyright {
-                margin-top: 30px;
-                font-family: 'Lato Light';
-            }
-        }
-        .lang {
-            margin: 62px 0 0 15px;
-            text-align: right;
-            .btn-lang {
-                padding: 5px 8px;
-                border: 1px solid @white;
-                border-radius: 0;
-                font-size: .6rem;
-                color: @white;
-            }
-            .btn-lang:hover {
-                border-radius: 2px;
-                background-color: @white;
-                color: @theme_blue;
-                -webkit-transition: all .5s ease;
-                -moz-transition: all .5s ease;
-                -ms-transition: all .5s ease;
-                -o-transition: all .5s ease;
-                transition: all .5s ease;
-            }
-        }
-    }
-    .qr_code_outer {
+    .qr_code_inner {
+      .qr_code {
         position: absolute;
-        right: 110px;
-        top: 50%;
-        margin-top: -90px;
-        text-align: center;
-        .qr_code_inner {
-            .qr_code {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 158px;
-                padding: 12px;
-                border: 1px solid #d9dadc;
-                background-color: @white;
-                word-wrap: break-word;
-                word-break: break-all;
-                p {
-                    margin: 0;
-                    line-height: 1.5;
-                    font-size: .6rem;
-                    color: #888;
-                }
-                .qr_code_img {
-                    width: 116px;
-                    height: 116px;
-                }
-            }
+        top: 0;
+        left: 0;
+        width: 158px;
+        padding: 12px;
+        border: 1px solid #d9dadc;
+        background-color: @white;
+        word-wrap: break-word;
+        word-break: break-all;
+        p {
+          margin: 0;
+          line-height: 1.5;
+          font-size: 0.6rem;
+          color: #888;
         }
+        .qr_code_img {
+          width: 116px;
+          height: 116px;
+        }
+      }
     }
+  }
 }
 
 @media (min-width: 992px) {
-    .footer .row {
-        margin-left: -50px;
-    }
+  .footer .row {
+    margin-left: -50px;
+  }
 }
 
 //iPhone4、iPhone5、iPhone6
 @media (max-width: 500px) {
-    .footer .subscribe {
-        max-width: 100%;
-    }
-    .footer .left {
-        padding: 0;
-        margin-bottom: 20px;
-    }
-    .footer .left .lang {
-        margin-left: 0;
-    }
-    .footer .left .wrap {
-        float: none;
-    }
-    .footer .qr_code_outer {
-        right: 173px;
-    }
+  .footer .subscribe {
+    max-width: 100%;
+  }
+  .footer .left {
+    padding: 0;
+    margin-bottom: 20px;
+  }
+  .footer .left .lang {
+    margin-left: 0;
+  }
+  .footer .left .wrap {
+    float: none;
+  }
+  .footer .qr_code_outer {
+    right: 173px;
+  }
 }
