--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -7,11 +7,11 @@
 {{ define "main" }}
 <div class="container">
 <div class="row">
-  <div class="col-md-4 nav nav-tree" id="st-tree">
+  <div class="col-md-4 nav nav-tree">
     <h1 class="title"> 文档 </h1>
     <div class="st_tree">
       {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
-     </div>
+    </div>
   </div>
 
     <div class="col-md-8 list">
