--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -1,195 +1,193 @@
 /* docs page */
 
-@import 'header.less';
-@import 'footer.less';
-@import "nav_tree.less";
-@min-height: 1100px;
+@import './base.less';
+@import './nav_tree.less';
+
 @text-color: #3e3e3e;
-@blue: #3A59F0;
 
 /** documentation list **/
 
 .list {
-    .item {
-        margin: 8px 0;
-        .content {
-            // h1:target,
-            // h2:target {
-            //     padding-top: 100px;
-            // }
-            h1,
-            h2,
-            h3 {
-                margin: 40px 0 20px;
-                font-family: 'TitilliumWeb';
-                font-weight: 400;
-                color: #142848;
-            }
-            p,
-            ol,
-            ul,
-            table {
-                line-height: 1.8;
-                font-size: .8rem;
-                font-family: "Lato";
-                font-weight: 400;
-            }
-            b,
-            optgroup,
-            strong {
-                font-family: "Lato";
-                font-weight: 600;
-            }
-            h1 {
-                font-size: 1.5rem;
-            }
-            h2 {
-                font-size: 1.3rem;
-            }
-            h3 {
-                font-size: 1.1rem;
-            }
-            p {
-                margin: 15px 0;
-                color: @text-color;
-            }
-            .figure {
-                .caption {
-                    display: none;
-                }
-            }
-            table {
-                display: block;
-                max-width: 100%;
-                border-spacing: 0;
-                border-collapse: collapse;
-                border-spacing: 2px;
-                margin-bottom: 10px;
-                font-size: .7rem;
-                thead {
-                    display: table-header-group;
-                    vertical-align: middle;
-                    border-color: inherit;
-                }
-                tbody {
-                    display: table-row-group;
-                    vertical-align: middle;
-                    border-color: inherit;
-                }
-                th,
-                td {
-                    padding: 6px 13px;
-                    border: 1px solid #dfe2e5;
-                }
-                th {
-                    font-weight: 600;
-                }
-                tr {
-                    background-color: #fff;
-                    border-top: 1px solid #c6cbd1;
-                }
-                tr:nth-child(2n) {
-                    background-color: #f6f8fa;
-                }
-            }
-            ol,
-            ul {
-                padding-left: 40px;
-                color: @text-color;
-                p {
-                    padding-left: 5px;
-                    margin: 2px 0;
-                }
-            }
-            ul li {
-                list-style-type: disc;
-            }
-            blockquote {
-                margin: 20px 0;
-                background-color: #ecf7ff;
-                border-left-color: #9ecef1;
-                p {
-                    margin: 0;
-                    color: #142848;
-                }
-            }
-            img {
-                display: block;
-                max-width: 100%;
-                margin: auto;
-            }
-            a {
-                color: @blue;
-            }
-            .blog-post-meta {
-                padding-left: 0;
-                margin-bottom: 20px;
-                font-size: .7rem;
-                color: #6a737d;
-                list-style: none;
-                svg {
-                    width: 18px;
-                    height: 18px;
-                    margin-top: -3px;
-                    margin-right: 5px;
-                    fill: #37434e;
-                    vertical-align: middle;
-                }
-                .meta-item {
-                    display: inline-block;
-                    box-sizing: border-box;
-                    padding-right: 20px;
-                }
-            }
+  .item {
+    margin: 8px 0;
+    .content {
+      // h1:target,
+      // h2:target {
+      //     padding-top: 100px;
+      // }
+      h1,
+      h2,
+      h3 {
+        margin: 40px 0 20px;
+        font-family: 'TitilliumWeb';
+        font-weight: 400;
+        color: #142848;
+      }
+      p,
+      ol,
+      ul,
+      table {
+        line-height: 1.8;
+        font-size: 0.8rem;
+        font-family: 'Lato';
+        font-weight: 400;
+      }
+      b,
+      optgroup,
+      strong {
+        font-family: 'Lato';
+        font-weight: 600;
+      }
+      h1 {
+        font-size: 1.5rem;
+      }
+      h2 {
+        font-size: 1.3rem;
+      }
+      h3 {
+        font-size: 1.1rem;
+      }
+      p {
+        margin: 15px 0;
+        color: @text-color;
+      }
+      .figure {
+        .caption {
+          display: none;
         }
-        .draw {
-            margin-top: 40px;
+      }
+      table {
+        display: block;
+        max-width: 100%;
+        border-spacing: 0;
+        border-collapse: collapse;
+        border-spacing: 2px;
+        margin-bottom: 10px;
+        font-size: 0.7rem;
+        thead {
+          display: table-header-group;
+          vertical-align: middle;
+          border-color: inherit;
         }
-        .operate {
-            padding: 15px 15px 0 30px;
-            border-top: 2px solid #000;
-            margin-top: 40px;
-            line-height: 22px;
-            font-size: .6rem;
-            .link_icon {
-                display: block;
-                line-height: 22px;
-                font-family: 'TitilliumWeb';
-                color: #000;
-                .icon {
-                    float: left;
-                    width: 22px;
-                    margin-right: 10px;
-                }
-                .icon-mail {
-                    padding-top: 3px;
-                }
-            }
+        tbody {
+          display: table-row-group;
+          vertical-align: middle;
+          border-color: inherit;
         }
+        th,
+        td {
+          padding: 6px 13px;
+          border: 1px solid #dfe2e5;
+        }
+        th {
+          font-weight: 600;
+        }
+        tr {
+          background-color: #fff;
+          border-top: 1px solid #c6cbd1;
+        }
+        tr:nth-child(2n) {
+          background-color: #f6f8fa;
+        }
+      }
+      ol,
+      ul {
+        padding-left: 40px;
+        color: @text-color;
+        p {
+          padding-left: 5px;
+          margin: 2px 0;
+        }
+      }
+      ul li {
+        list-style-type: disc;
+      }
+      blockquote {
+        margin: 20px 0;
+        background-color: #ecf7ff;
+        border-left-color: #9ecef1;
+        p {
+          margin: 0;
+          color: #142848;
+        }
+      }
+      img {
+        display: block;
+        max-width: 100%;
+        margin: auto;
+      }
+      a {
+        color: @theme_blue;
+      }
+      .blog-post-meta {
+        padding-left: 0;
+        margin-bottom: 20px;
+        font-size: 0.7rem;
+        color: #6a737d;
+        list-style: none;
+        svg {
+          width: 18px;
+          height: 18px;
+          margin-top: -3px;
+          margin-right: 5px;
+          fill: #37434e;
+          vertical-align: middle;
+        }
+        .meta-item {
+          display: inline-block;
+          box-sizing: border-box;
+          padding-right: 20px;
+        }
+      }
     }
+    .draw {
+      margin-top: 40px;
+    }
+    .operate {
+      padding: 15px 15px 0 30px;
+      border-top: 2px solid #000;
+      margin-top: 40px;
+      line-height: 22px;
+      font-size: 0.6rem;
+      .link_icon {
+        display: block;
+        line-height: 22px;
+        font-family: 'TitilliumWeb';
+        color: #000;
+        .icon {
+          float: left;
+          width: 22px;
+          margin-right: 10px;
+        }
+        .icon-mail {
+          padding-top: 3px;
+        }
+      }
+    }
+  }
 }
 
 .doc,
 .blog {
-    width: 100%;
-    & a {
-        text-decoration: none;
-    }
-    .page {
-        min-height: @min-height;
-        padding-top: 5rem;
-    }
+  width: 100%;
+  & a {
+    text-decoration: none;
+  }
+  .page {
+    min-height: 100vh;
+    padding-top: 5rem;
+  }
 }
 
 @media (max-width: 768px) {
-    .list {
-        margin-left: 0;
-    }
-    .blog .list-comments .item .pic {
-        display: block;
-        margin: auto;
-    }
-    .doc .list .item .operate .col-md-3 {
-        margin: 5px 0;
-    }
+  .list {
+    margin-left: 0;
+  }
+  .blog .list-comments .item .pic {
+    display: block;
+    margin: auto;
+  }
+  .doc .list .item .operate .col-md-3 {
+    margin: 5px 0;
+  }
 }
