--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -28,7 +28,7 @@
 
   h3 {
     margin: 10px 0;
-    font-size: .8rem;
+    font-size: 0.8rem;
     font-weight: 400;
     color: @link-blue;
   }
@@ -69,7 +69,7 @@
       }
 
       .mkdf-iwt-image {
-        box-shadow: 0 5px 22px rgba(0,0,0,.1);
+        box-shadow: 0 5px 22px rgba(0, 0, 0, 0.1);
 
         img {
           width: 100%;
@@ -85,7 +85,7 @@
         width: 100%;
         height: 100%;
         padding: 30px;
-        background-color: rgba(242,241,241,.8);
+        background-color: rgba(242, 241, 241, 0.8);
         box-sizing: border-box;
         opacity: 0;
         -webkit-transition: opacity 0.25s;
@@ -100,11 +100,11 @@
           opacity: 0;
           font-size: 1.6rem;
           color: @dark-blue;
-          -webkit-transform: translate3d(40%,0,0);
-          -moz-transform: translate3d(40%,0,0);
-          transform: translate3d(40%,0,0);
-          -webkit-transition: -webkit-transform 0s 0.2s,opacity 0.2s;
-          transition: transform 0s 0.2s,opacity 0.2s;
+          -webkit-transform: translate3d(40%, 0, 0);
+          -moz-transform: translate3d(40%, 0, 0);
+          transform: translate3d(40%, 0, 0);
+          -webkit-transition: -webkit-transform 0s 0.2s, opacity 0.2s;
+          transition: transform 0s 0.2s, opacity 0.2s;
 
           &:after {
             content: ' ';
@@ -130,15 +130,20 @@
 
           .mkdf-iwt-title {
             opacity: 1;
-            -webkit-transform: translate3d(0,0,0);
-            -moz-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
-            -webkit-transition: -webkit-transform 0.35s cubic-bezier(.15,.7,.54,.99),opacity 0.4s;
-            transition: transform 0.35s cubic-bezier(.15,.7,.54,.99),opacity 0.4s;
+            -webkit-transform: translate3d(0, 0, 0);
+            -moz-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+            -webkit-transition: -webkit-transform 0.35s
+                cubic-bezier(0.15, 0.7, 0.54, 0.99),
+              opacity 0.4s;
+            transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99),
+              opacity 0.4s;
 
             &:after {
-              -webkit-transition: -webkit-transform 0.35s cubic-bezier(.15,.7,.54,.99) 0.2s;
-              transition: transform 0.35s cubic-bezier(.15,.7,.54,.99) 0.2s;
+              -webkit-transition: -webkit-transform 0.35s
+                cubic-bezier(0.15, 0.7, 0.54, 0.99) 0.2s;
+              transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99)
+                0.2s;
               -webkit-transform: scaleX(1);
               -moz-transform: scaleX(1);
               transform: scaleX(1);
@@ -164,28 +169,28 @@
       background-color: @dark-blue;
 
       .mkdf-elements-holder-item-inner {
-       position: absolute;
-       right: 70px;
-       bottom: 100px;
-       z-index: 99;
-       text-align: right;
-       color: #fff;
+        position: absolute;
+        right: 70px;
+        bottom: 100px;
+        z-index: 99;
+        text-align: right;
+        color: #fff;
 
-       h1 {
-         margin-right: -4px;
-         font-size: 2rem;
-         color: #fff;
-       }
+        h1 {
+          margin-right: -4px;
+          font-size: 2rem;
+          color: #fff;
+        }
 
-       h2 {
-         margin-bottom: 45px;
-       }
+        h2 {
+          margin-bottom: 45px;
+        }
 
-       h2,
-       h3,
-       p {
-         color: #fff;
-       }
+        h2,
+        h3,
+        p {
+          color: #fff;
+        }
       }
 
       .mkdf-iwt-image {
@@ -288,11 +293,11 @@
               color: @dark-blue;
               font-size: 0.8rem;
               font-weight: 400;
-              -webkit-transform: translate3d(40%,0,0);
-              -moz-transform: translate3d(40%,0,0);
-              transform: translate3d(40%,0,0);
-              -webkit-transition: -webkit-transform 0s 0.2s,opacity 0.2s;
-              transition: transform 0s 0.2s,opacity 0.2s;
+              -webkit-transform: translate3d(40%, 0, 0);
+              -moz-transform: translate3d(40%, 0, 0);
+              transform: translate3d(40%, 0, 0);
+              -webkit-transition: -webkit-transform 0s 0.2s, opacity 0.2s;
+              transition: transform 0s 0.2s, opacity 0.2s;
             }
           }
 
@@ -300,16 +305,18 @@
             .mkdf-iwt-text {
               p {
                 opacity: 1;
-                -webkit-transform: translate3d(0,0,0);
-                -moz-transform: translate3d(0,0,0);
-                transform: translate3d(0,0,0);
-                -webkit-transition: -webkit-transform 0.35s cubic-bezier(.15,.7,.54,.99),opacity 0.4s;
-                transition: transform 0.35s cubic-bezier(.15,.7,.54,.99),opacity 0.4s;
+                -webkit-transform: translate3d(0, 0, 0);
+                -moz-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 0, 0);
+                -webkit-transition: -webkit-transform 0.35s
+                    cubic-bezier(0.15, 0.7, 0.54, 0.99),
+                  opacity 0.4s;
+                transition: transform 0.35s cubic-bezier(0.15, 0.7, 0.54, 0.99),
+                  opacity 0.4s;
               }
             }
           }
         }
-
       }
 
       .jonin {
