--- a/src/less/nav_tree.less
+++ b/src/less/nav_tree.less
@@ -1,85 +1,85 @@
 /* tree navigator */
 
 .nav-tree {
-    max-width: 340px;
-    padding: 0 20px;
-    font-family: 'TitilliumWeb';
-    .title {
-        margin: 40px 0 20px;
-        font-size: 1.5rem;
-        font-weight: 400;
-        color: #142848;
+  max-width: 340px;
+  padding: 0 20px;
+  font-family: 'TitilliumWeb';
+  .title {
+    margin: 40px 0 20px;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #142848;
+  }
+  .st_tree {
+    width: 100%;
+    margin-top: 5px;
+    ul {
+      padding-left: 23px;
     }
-    .st_tree {
-        width: 100%;
-        margin-top: 5px;
-        ul {
-            padding-left: 23px;
-        }
-        & > ul {
-            padding-left: 15px;
-        }
-        li {
-            position: relative;
-            margin-top: 10px;
-            a {
-                display: block;
-                padding-left: 23px;
-                font-size: .8rem;
-                line-height: 1.5;
-                color: #000;
-            }
-        }
-        .open > a,
-        .open > a:focus,
-        .open > a:hover {
-            background: none;
-        }
-        .icon {
-            float: left;
-            width: 14px;
-            height: 18px;
-            margin: 2px 10px 2px 0;
-            background: url("https://download.pingcap.com/images/st_node.png");
-            background-size: 14px 18px;
-        }
-        .active .icon {
-            float: left;
-            width: 14px;
-            height: 18px;
-            margin: 2px 10px 2px 0;
-            background: url("https://download.pingcap.com/images/st_node_active.png");
-            background-size: 14px 18px;
-        }
-        .active a {
-            color: #3a59f0;
-        }
-        .folder:before {
-            position: absolute;
-            top: 50%;
-            margin-top: -8px;
-            content: ' ';
-            width: 0;
-            height: 0;
-            border-width: 8px 10px 8px 10px;
-            border-style: solid dashed dashed dashed;
-            border-color: transparent transparent transparent #000;
-        }
-        .folder.open:before {
-            position: absolute;
-            top: 50%;
-            margin-top: -5px;
-            width: 0;
-            height: 0;
-            border-width: 10px 8px 10px 8px;
-            border-style: solid dashed dashed dashed;
-            border-color: #000 transparent transparent transparent;
-        }
+    & > ul {
+      padding-left: 15px;
     }
+    li {
+      position: relative;
+      margin-top: 10px;
+      a {
+        display: block;
+        padding-left: 23px;
+        font-size: 0.8rem;
+        line-height: 1.5;
+        color: #000;
+      }
+    }
+    .open > a,
+    .open > a:focus,
+    .open > a:hover {
+      background: none;
+    }
+    .icon {
+      float: left;
+      width: 14px;
+      height: 18px;
+      margin: 2px 10px 2px 0;
+      background: url('https://download.pingcap.com/images/st_node.png');
+      background-size: 14px 18px;
+    }
+    .active .icon {
+      float: left;
+      width: 14px;
+      height: 18px;
+      margin: 2px 10px 2px 0;
+      background: url('https://download.pingcap.com/images/st_node_active.png');
+      background-size: 14px 18px;
+    }
+    .active a {
+      color: #3a59f0;
+    }
+    .folder:before {
+      position: absolute;
+      top: 50%;
+      margin-top: -8px;
+      content: ' ';
+      width: 0;
+      height: 0;
+      border-width: 8px 10px 8px 10px;
+      border-style: solid dashed dashed dashed;
+      border-color: transparent transparent transparent #000;
+    }
+    .folder.open:before {
+      position: absolute;
+      top: 50%;
+      margin-top: -5px;
+      width: 0;
+      height: 0;
+      border-width: 10px 8px 10px 8px;
+      border-style: solid dashed dashed dashed;
+      border-color: #000 transparent transparent transparent;
+    }
+  }
 }
 
 @media (max-width: 768px) {
-    .nav-tree {
-        position: static;
-    }
+  .nav-tree {
+    position: static;
+  }
 }
