--- a/src/less/progressive_images.less
+++ b/src/less/progressive_images.less
@@ -16,7 +16,7 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: visibility 0s linear 0s,opacity .4s 0s;
+  transition: visibility 0s linear 0s, opacity 0.4s 0s;
 }
 
 .blur-image-container .thumb-loaded,
