--- a/src/less/index.less
+++ b/src/less/index.less
@@ -43,8 +43,8 @@
       width: 100%;
       height: 100vh;
       min-height: 730px;
-      background: url('https://download.pingcap.com/images/slogan-mask.png')
-        no-repeat center top;
+      background: url('../../static/images/slogan-mask.png') no-repeat center
+        top;
       background-attachment: fixed;
       background-size: cover;
       -webkit-animation: fadeInRight 0.4s;
@@ -67,10 +67,8 @@
         margin: auto;
         position: absolute;
         width: 100%;
-        // top: calc(~"50% - 80px");
         top: 50%;
         transform: translateY(calc(~'-50% - 70px'));
-        // transform: translateY(-50%);
         .logo {
           img {
             height: 80px;
@@ -85,9 +83,7 @@
           margin-bottom: 22px;
           font-size: 1.1rem;
         }
-        // .desc {
-        //     line-height: 28px;
-        // }
+
         .btn {
           height: 36px;
           min-width: 130px;
@@ -136,7 +132,7 @@
             width: 20px;
             height: 19px;
             margin-top: -10px;
-            background: url('https://download.pingcap.com/images/icon_github.png');
+            background: url('../../static/images/icon_github.png');
             background-size: 20px 19px;
           }
         }
@@ -145,8 +141,8 @@
     /* Section 2 */
     .features {
       position: relative;
-      background: url('https://download.pingcap.com/images/features-mask.png')
-        no-repeat center top;
+      background: url('../../static/images/features-mask.png') no-repeat center
+        top;
       background-attachment: fixed;
       background-size: cover;
       padding: 120px 0;
@@ -218,9 +214,8 @@
     }
     /* Section 3 */
     .advantages {
-      background: #080713
-        url('https://download.pingcap.com/images/advantages-mask.png') no-repeat
-        center bottom;
+      background: #080713 url('../../static/images/advantages-mask.png')
+        no-repeat center bottom;
       background-size: cover;
       padding: 85px 0 500px;
       .row {
