style: add style entry style.less

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -305,6 +305,13 @@ p a {
   transition: color 0.15s ease-out;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'TitilliumWeb';
+}
+
 /* 小屏幕（平板，大于等于 768px） */
 
 @media (max-width: 768px) {
