--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,15 +3,11 @@
 
 @line_height: 1.7;
 @font_weight_300: 300;
+@dark-blue: #0d0b1e;
 
 .landingpage {
   color: @white;
-  h1,
-  h2,
-  h3,
-  h4 {
-    font-family: 'TitilliumWeb';
-  }
+
   h2 {
     font-size: 1.2rem;
   }
@@ -43,8 +39,7 @@
       width: 100%;
       height: 100vh;
       min-height: 730px;
-      background: url('../../static/images/slogan-mask.png') no-repeat center
-        top;
+      background: url('/images/slogan-mask.png') no-repeat center top;
       background-attachment: fixed;
       background-size: cover;
       -webkit-animation: fadeInRight 0.4s;
@@ -132,8 +127,8 @@
             width: 20px;
             height: 19px;
             margin-top: -10px;
-            background: url('../../static/images/icon_github.png');
-            background-size: 20px 19px;
+            // background: url('/images/icon_github.png');
+            // background-size: 20px 19px;
           }
         }
       }
@@ -141,8 +136,7 @@
     /* Section 2 */
     .features {
       position: relative;
-      background: url('../../static/images/features-mask.png') no-repeat center
-        top;
+      background: url('/images/features-mask.png') no-repeat center top;
       background-attachment: fixed;
       background-size: cover;
       padding: 120px 0;
@@ -214,10 +208,10 @@
     }
     /* Section 3 */
     .advantages {
-      background: #080713 url('../../static/images/advantages-mask.png')
-        no-repeat center bottom;
-      background-size: cover;
-      padding: 85px 0 500px;
+      background: @dark-blue url('/images/advantages-mask.png') no-repeat center
+        bottom;
+      background-size: contain;
+      padding: 85px 0 680px;
       .row {
         position: relative;
         min-height: 285px;
