style: update header.less

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,7 +3,7 @@
 
 @line_height: 1.7;
 @font_weight_300: 300;
-@dark-blue: #0d0b1e;
+@dark_blue: #0d0b1e;
 
 .landingpage {
   color: @white;
@@ -26,12 +26,7 @@
   .page {
     background-image: linear-gradient(to top, #080000, #100f2e);
     background-image: -webkit-linear-gradient(to top, #080000, #100f2e);
-    header .navbar-inverse {
-      background-color: @bg_black_with_alpha0;
-    }
-    header.fixed-top .navbar-inverse {
-      background-color: @bg_black_with_alpha85;
-    }
+
     /* Section 1 */
     .slogan-mask {
       position: relative;
@@ -208,7 +203,7 @@
     }
     /* Section 3 */
     .advantages {
-      background: @dark-blue url('/images/advantages-mask.png') no-repeat center
+      background: @dark_blue url('/images/advantages-mask.png') no-repeat center
         bottom;
       background-size: contain;
       padding: 85px 0 680px;
