--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home | PingCAP</title>
-    <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+    <!-- <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet"> -->
     <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
     {{ block "headcss" . }}{{ end }}
     <style type="text/css" media="screen">
@@ -27,7 +27,7 @@
 </head>
 
 <!-- Todo body class extend -->
-<body class="en landingpage archives zh blog jobs recruit about en meetup">
+<body>
   {{ $data_i18_cn := $.Scratch.Get "data_i18_cn" }}
     <div class="page">
         {{ if $data_i18_cn }}
