--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -1,29 +1,14 @@
 <header id="header" role="navigation">
-    <nav class="navbar navbar-inverse" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar">
-              {{ $nav_active := $.Scratch.Get "nav_active" }}
-                <ul class="nav navbar-nav navbar-right main-nav">
-                    {{ partial "search/ui.html" . }}
-                    <li class="{{if eq $nav_active "doc"}}sel{{end}}"><a href="/docs-cn">文档</a></li>
-                    <li class="{{if eq $nav_active "blog"}}sel{{end}}"><a href="/blog-cn">博客</a></li>
-                    <li class="{{if eq $nav_active "meetup"}}sel{{end}}"><a href="/meetup">meetup</a></li>
-                    <li class="{{if eq $nav_active "about"}}sel{{end}}"><a href="/about-zh">关于</a></li>
-                    <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh">
-                        下载 </a></li>
-                </ul>
-            </div>
-        </div>
+    <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
+    <nav>
+        {{ $nav_active := $.Scratch.Get "nav_active" }}
+        <ul class="navigations">
+            <li class="{{if eq $nav_active " doc "}}sel{{end}}"><a href="/docs-cn">文档</a></li>
+            <li class="{{if eq $nav_active " blog "}}sel{{end}}"><a href="/blog-cn">博客</a></li>
+            <li class="{{if eq $nav_active " meetup "}}sel{{end}}"><a href="/meetup">Meetup</a></li>
+            <li class="{{if eq $nav_active " about "}}sel{{end}}"><a href="/about-cn">关于</a></li>
+            <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh"> 下载 </a></li>
+        </ul>
+        {{ partial "search/ui.html" . }}
     </nav>
 </header>
