--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,28 +1,15 @@
 <header id="header" role="navigation">
-    <nav class="navbar navbar-inverse" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+  <nav>
+      <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
 
-                <a class="nav-brand" href="/en"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar">
-                {{ $nav_active := $.Scratch.Get "nav_active" }}
-                <ul class="nav navbar-nav navbar-right main-nav">
-                  {{ partial "search/ui.html" . }}
-                    <li class="{{if eq $nav_active "doc"}}sel{{end}}"><a href="/docs">Docs</a></li>
-                    <li class="{{if eq $nav_active "blog"}}sel{{end}}"><a href="https://pingcap.github.io/blog" target="_blank">Blog</a></li>
-                    <li class="{{if eq $nav_active "about"}}sel{{end}}"><a href="/about">About</a></li>
-                    <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment">
-                        Download </a></li>
-                </ul>
-            </div>
-        </div>
+        {{ $nav_active := $.Scratch.Get "nav_active" }}
+        <ul class="navigations">
+            <li class="{{if eq $nav_active " doc "}}sel{{end}}"><a href="/docs-cn">Doc</a></li>
+            <li class="{{if eq $nav_active " blog "}}sel{{end}}"><a href="/blog-cn">Blog</a></li>
+            <li class="{{if eq $nav_active " meetup "}}sel{{end}}"><a href="/meetup">Meetup</a></li>
+            <li class="{{if eq $nav_active " about "}}sel{{end}}"><a href="/about-cn">About</a></li>
+            <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh">Download</a></li>
+        </ul>
+        {{ partial "search/ui.html" . }}
     </nav>
 </header>
