--- a/src/less/base.less
+++ b/src/less/base.less
@@ -88,7 +88,8 @@ body {
 
 body,
 body * {
-  box-sizing: $box_size;
+  box-sizing: @box_size;
+  margin: 0;
 }
 
 input,
@@ -299,6 +300,7 @@ ul li {
 a,
 p a {
   text-decoration: none;
+  color: inherit;
   cursor: pointer;
   -webkit-transition: color 0.15s ease-out;
   -moz-transition: color 0.15s ease-out;
