style: update header, footer, landingpade styles

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,15 +1,14 @@
 <header id="header" role="navigation">
-  <nav>
-      <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
-
-        {{ $nav_active := $.Scratch.Get "nav_active" }}
-        <ul class="navigations">
-            <li class="{{if eq $nav_active " doc "}}sel{{end}}"><a href="/docs-cn">Doc</a></li>
-            <li class="{{if eq $nav_active " blog "}}sel{{end}}"><a href="/blog-cn">Blog</a></li>
-            <li class="{{if eq $nav_active " meetup "}}sel{{end}}"><a href="/meetup">Meetup</a></li>
-            <li class="{{if eq $nav_active " about "}}sel{{end}}"><a href="/about-cn">About</a></li>
-            <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh">Download</a></li>
-        </ul>
-        {{ partial "search/ui.html" . }}
-    </nav>
+  <nav class="container">
+    <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
+    {{ $nav_active := $.Scratch.Get "nav_active" }}
+    <ul class="navigations">
+      <li class="{{if eq $nav_active " doc "}}sel{{end}}"><a href="/docs-cn">Doc</a></li>
+      <li class="{{if eq $nav_active " blog "}}sel{{end}}"><a href="/blog-cn">Blog</a></li>
+      <li class="{{if eq $nav_active " meetup "}}sel{{end}}"><a href="/meetup">Meetup</a></li>
+      <li class="{{if eq $nav_active " about "}}sel{{end}}"><a href="/about-cn">About</a></li>
+      <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh">Download</a></li>
+     </ul>
+     {{ partial "search/ui.html" . }}
+  </nav>
 </header>
