--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -1,23 +1,13 @@
 <section class="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-md-5">
-                <div class="left f-cb">
-                    <div class="lang f-fr">
-                        <a href="{{ .Params.data_i18_page_link }}" class="btn btn-lang" id="lang">English</a>
-                    </div>
-                    <div class="wrap f-fr">
-                        <div class="footer-logo"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="PingCap" style="width: 140px;">
-                        </div>
-                        <div class="copyright">
-                            <span class="year">© 2017 北京平凯星辰科技发展有限公司</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-7 f-pr">
-                <div class="icons">
-                    <a href="mailto:info@pingcap.com" class="link_icon email">
+        <div class="left">
+            <img class="logo" src="https://download.pingcap.com/images/pingcap_logo.png" alt="PingCap" style="width: 140px;">
+            <span class="copyright"> &copy; 2017 北京平凯星辰科技发展有限公司</span>
+            <a href="{{ .Params.data_i18_page_link }}" class="btn btn-lang" id="lang">English</a>
+        </div>
+        <div class="right">
+            <div class="social-links">
+                <a href="mailto:info@pingcap.com" class="link_icon email">
                         <svg height="512" preserveAspectRatio="xMidYMid" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <defs>
                                 <style>
@@ -30,7 +20,7 @@
                             <path class="cls-1" d="M256.000,512.000 C114.615,512.000 0.000,397.385 0.000,256.000 C0.000,114.615 114.615,0.000 256.000,0.000 C397.385,0.000 512.000,114.615 512.000,256.000 C512.000,397.385 397.385,512.000 256.000,512.000 ZM108.159,344.493 L191.319,265.831 L108.159,197.002 L108.159,344.493 ZM403.839,147.838 L108.159,147.838 L108.159,177.337 L255.999,305.162 L403.839,177.337 L403.839,147.838 ZM403.839,197.002 L320.679,265.831 L403.839,344.493 L403.839,197.002 ZM311.439,275.663 L255.999,324.827 L200.559,275.663 L108.159,364.158 L403.839,364.158 L311.439,275.663 Z" />
                         </svg>
                     </a>
-                    <a href="javascript:;" class="link_icon wechat" id="wechat">
+                <a href="javascript:;" class="link_icon wechat" id="wechat">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
                             <defs>
                                 <style>
@@ -52,7 +42,7 @@
                             </g>
                         </svg>
                     </a>
-                    <a href="http://www.weibo.com/pingcap" class="link_icon weibo">
+                <a href="http://www.weibo.com/pingcap" class="link_icon weibo">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
                             <defs>
                                 <style>
@@ -75,57 +65,56 @@
                             </g>
                         </svg>
                     </a>
-                </div>
-                <div id="js_qr_code" class="qr_code_outer f-hide">
-                    <div class="qr_code_inner">
-                        <div class="qr_code">
-                            <img id="js_qr_code_img" class="qr_code_img" src="https://download.pingcap.com/images/qrcode.jpg">
-                            <p>微信扫一扫
-                                <br> 微信ID：pingcap2015
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div id="subscribe" class="subscribe">
-                    <!-- Begin MailChimp Signup Form -->
-                    <style type="text/css" media="screen">
-                        #mc_embed_signup .response {
-                            margin-top: 10px;
-                        }
-                    </style>
-                    <div id="mc_embed_signup">
-                        <form action="//pingcap.us16.list-manage.com/subscribe/post?u=ab57beb8a88391cf6193c1b48&amp;id=7c67af4f9d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                            <div id="mc_embed_signup_scroll">
-                                <div class="form-inline">
-                                    <input type="email" value="" name="EMAIL" id="mce-EMAIL" class="form-control" placeholder="Subscribe to our newsletter">
-                                    <input type="submit" value="订阅" name="subscribe" id="mc-embedded-subscribe" class="btn btn-subscribe">
-                                </div>
-                                <div id="mce-responses" class="clear">
-                                    <div class="response" id="mce-error-response" style="display:none"></div>
-                                    <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>
-                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                    <input type="text" name="b_ab57beb8a88391cf6193c1b48_7c67af4f9d" tabindex="-1" value="">
-                                </div>
+            </div>
+            <div id="subscribe" class="subscribe">
+                <!-- Begin MailChimp Signup Form -->
+                <style type="text/css" media="screen">
+                    #mc_embed_signup .response {
+                        margin-top: 10px;
+                    }
+                </style>
+                <div id="mc_embed_signup">
+                    <form action="//pingcap.us16.list-manage.com/subscribe/post?u=ab57beb8a88391cf6193c1b48&amp;id=7c67af4f9d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <div class="form-inline">
+                                <input type="email" value="" name="EMAIL" id="mce-EMAIL" class="form-control" placeholder="Subscribe to our newsletter">
+                                <input type="submit" value="订阅" name="subscribe" id="mc-embedded-subscribe" class="btn btn-subscribe">
                             </div>
-                        </form>
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                <input type="text" name="b_ab57beb8a88391cf6193c1b48_7c67af4f9d" tabindex="-1" value="">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <script type='text/javascript' src='https://download.pingcap.com/js/mc-validate.js'></script>
+                <script type='text/javascript'>
+                ;(function($) {
+  window.fnames = new Array()
+  window.ftypes = new Array()
+  fnames[0] = 'EMAIL'
+  ftypes[0] = 'email'
+  fnames[1] = 'FNAME'
+  ftypes[1] = 'text'
+  fnames[2] = 'LNAME'
+  ftypes[2] = 'text'
+})(jQuery)
+var $mcj = jQuery.noConflict(true)
+</script>
+                <!--End mc_embed_signup-->
+            </div>
+            <div id="js_qr_code" class="qr_code_outer f-hide">
+                <div class="qr_code_inner">
+                    <div class="qr_code">
+                        <img id="js_qr_code_img" class="qr_code_img" src="https://download.pingcap.com/images/qrcode.jpg">
+                        <p>微信扫一扫
+                            <br> 微信ID：pingcap2015
+                        </p>
                     </div>
-                    <script type='text/javascript' src='https://download.pingcap.com/js/mc-validate.js'></script>
-                    <script type='text/javascript'>
-                        (function($) {
-                            window.fnames = new Array();
-                            window.ftypes = new Array();
-                            fnames[0] = 'EMAIL';
-                            ftypes[0] = 'email';
-                            fnames[1] = 'FNAME';
-                            ftypes[1] = 'text';
-                            fnames[2] = 'LNAME';
-                            ftypes[2] = 'text';
-                        }(jQuery));
-                        var $mcj = jQuery.noConflict(true);
-                    </script>
-                    <!--End mc_embed_signup-->
                 </div>
             </div>
         </div>
