--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,20 +1,18 @@
 /* header module */
 @import './base.less';
 @nav_height: 50px;
+@search_box_width: 300px;
 @search_box_height: 40px;
-@gray_white: #f5f5f5;
-@white_with_alpha50: rgba(255, 255, 255, 0.5);
-@bg_white_with_alpha10: rgba(255, 255, 255, 0.1);
 
 header {
   padding: 15px;
+  width: 100%;
+  background-color: @bg_black_with_alpha90;
 
   &.fixed-top {
     position: fixed;
     top: 0;
-    background-color: @bg_black_with_alpha85;
     z-index: 99;
-    width: 100%;
   }
 
   .nav-brand {
@@ -29,12 +27,11 @@ header {
     flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
-    margin: 0 auto;
     min-height: @nav_height;
-    max-width: @max_width;
+
     .navigations {
       display: flex;
-      margin-right: 1rem;
+      justify-content: center;
       padding: 0;
       li {
         margin: 0 10px;
@@ -43,56 +40,49 @@ header {
         color: @white;
         &.sel a,
         & a:hover {
-          color: @bg_white_with_alpha73;
-          -webkit-transition: all 0.5s ease;
-          -moz-transition: all 0.5s ease;
-          -ms-transition: all 0.5s ease;
-          -o-transition: all 0.5s ease;
+          color: fade(@white, 80%);
           transition: all 0.5s ease;
         }
       }
       .btn-download {
         padding: 4px 8px 5px;
-        border: 1px solid @white_with_alpha50;
-        border-radius: 2px;
+        .rounded-corners(2px);
         color: @white;
         &:hover {
           background-color: @white;
           color: @theme_blue;
-          -webkit-transition: all 0.5s ease;
-          -moz-transition: all 0.5s ease;
-          -ms-transition: all 0.5s ease;
-          -o-transition: all 0.5s ease;
           transition: all 0.5s ease;
         }
       }
     }
     #search-input {
       position: relative;
+      width: @search_box_width;
       height: @search_box_height;
       padding: 0.5rem;
+      border: 1px solid fade(@white, 0%);
+      .rounded-corners(2px);
       outline: 0;
-      border: none;
-      border-radius: 0;
-      background-color: @bg_white_with_alpha10;
+      background-color: fade(@white, 12%);
       color: @gray_white;
+      font-size: 1rem;
       transition: opacity 0.15s ease-in;
+
+      &:focus {
+        border-color: fade(@theme_blue, 50%);
+      }
     }
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   header nav {
     flex-flow: column wrap;
   }
 
   header nav .navigations {
-    flex-flow: row wrap;
-    justify-content: center;
-    margin-right: 0;
-
     li {
-      margin: 12px 5px;
+      margin: 15px 5px;
     }
   }
 }
