template: update index

--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -1,3 +1,12 @@
+{{ define "headcss" }}
+{{$.Scratch.Set "data_i18_cn" true }}
+<style type="text/css" media="screen">
+  header {
+    background-color: rgba(0, 0, 0, 0) !important;
+  }
+</style>
+{{ end }}
+
 {{ define "main" }}
 <div class="landingpage">
   <section class="slogan-mask">
