--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -1,6 +1,14 @@
+{{ define "headcss" }}
+<style type="text/css" media="screen">
+  header {
+    background-color: rgba(0, 0, 0, 0) !important;
+  }
+</style>
+{{ end }}
+
 {{ define "main" }}
 <div class="landingpage">
-  <!-- <section class="slogan-mask">
+  <section class="slogan-mask">
       <div class="container">
           <div class="row">
               <div class="col-xs-11 col-md-9 col-lg-8" style="height: 100%;">
@@ -121,6 +129,6 @@
               </div>
           </div>
       </div>
-  </section> -->
+  </section>
 </div>
 {{ end }}
