--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -115,8 +115,8 @@
   }
   .qr_code_outer {
     position: absolute;
-    right: 110px;
-    top: 50%;
+    right: 130px;
+    // top: 50%;
     margin-top: -90px;
     text-align: center;
     .qr_code_inner {
@@ -149,5 +149,9 @@
 @media (max-width: 500px) {
   .footer .right {
     flex-basis: 100%;
+  }
+  .footer .qr_code_outer {
+    left: 50%;
+    margin-top: -50%;
   }
 }
