--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -1,7 +1,7 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
 {{$.Scratch.Set "data_i18_cn" true }}
-<link href="/css/about.css" rel="stylesheet">
+<!-- <link href="/css/about.css" rel="stylesheet"> -->
 <style type="text/css" media="screen">
 .amap-logo,
 .amap-copyright {
@@ -19,22 +19,22 @@
 {{ define "footjs" }}
 <script type="text/javascript" src='https://webapi.amap.com/maps?v=1.3&key=5943f0161bc8beb9f40b4f652faf648f&callback=init'></script>
 <script type="text/javascript">
-function init(){
-    var map = new AMap.Map('map', {
-        resizeEnable: true,
-        zoom: 15,
-        center: [116.357273, 40.042345],
-        mapStyle: 'amap://styles/light' //样式URL
-    });
-    //添加点标记，并使用自己的icon
-    new AMap.Marker({
-        map: map,
-        position: [116.357273, 40.042345],
-        icon: new AMap.Icon({
-            size: new AMap.Size(32, 32), //图标大小
-            image: "https://download.pingcap.com/images/location.svg"
-        })
-    });
+function init() {
+  var map = new AMap.Map('map', {
+    resizeEnable: true,
+    zoom: 15,
+    center: [116.357273, 40.042345],
+    mapStyle: 'amap://styles/light' //样式URL
+  })
+  //添加点标记，并使用自己的icon
+  new AMap.Marker({
+    map: map,
+    position: [116.357273, 40.042345],
+    icon: new AMap.Icon({
+      size: new AMap.Size(32, 32), //图标大小
+      image: 'https://download.pingcap.com/images/location.svg'
+    })
+  })
 }
 </script>
 {{ end }}
